--- a/_config.yml
+++ b/_config.yml
@@ -8,11 +8,10 @@ highlighter: rouge
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
 #
-title : Love Lab
+title : Yang Lab
 author :
-  name : Michael Love
-  github : mikelove
-  twitter : mikelove
+  name : Jingjing Yang
+  github : yjingj
 
 # The production_url is only used when full-domain names are needed
 # such as sitemap.txt 
@@ -22,7 +21,7 @@ author :
 # Else if you are pushing to username.github.io, replace with your username.
 # Finally if you are pushing to a GitHub project page, include the project name at the end.
 #
-production_url : http://mikelove.github.io
+production_url : http://yanglab-emory.github.io
 
 # All Jekyll-Bootstrap specific configurations are namespaced into this hash
 #
